tests/miniJava/neg/003707_mutation.MiniJava
class java { public static void Main ( String [ ] java ) { if ( 0 ) { } else int [] java ; { } } }
